# slice-alloc

./: .gitignore  configure.ac
src/: Makefile.am  slice-alloc.c  slice-alloc.h  test.c
